fix: no left spacing of pubs on small screens

--- a/css/desai_lab_general.css
+++ b/css/desai_lab_general.css
@@ -94,8 +94,7 @@ strong {
     font-size: 1.0em;
     margin-bottom: 10px;
     line-height: 18px;
-    padding-left: 22px;
-    text-indent: -22px;
+    margin-left: 1rem;
 }
 
 .alumni p {
